test for queue added

--- a/src/app/queue/queue.component.html
+++ b/src/app/queue/queue.component.html
@@ -8,9 +8,9 @@
       </div>
     </form>
 
-    <ul class="list-group" *ngFor="let result of searchResult; let i=index;" (click)="openFile(result, i)">
-    <a class="list-group-item clearfix" style="cursor:pointer">
-        <img style="border-radius:10px; float: left; height: 50px; width: 50px;"src="{{ result.image }}" >
+    <ul class="list-group" *ngFor="let result of searchResult; let i=index;">
+    <a class="list-group-item clearfix">
+        <img style="cursor:pointer; border-radius:10px; float: left; height: 50px; width: 50px;"src="{{ result.image }}" (click)="openFile(result, i)">
         <span style="position: relative; bottom:0%; float: right; font-size:30px; cursor: pointer;" (click)="addFile(i)" class="material-icons"> favorite </span>
         <div style="float: right;height:1px; width:100%"></div>
         <h5 style="max-width:80%; float: right">{{ result.title_original }}</h5>
